Added option to reset after searching

--- a/KeleaNews/KeleaNews/App/Supporting Files/Localizable.xcstrings
+++ b/KeleaNews/KeleaNews/App/Supporting Files/Localizable.xcstrings
@@ -3,6 +3,12 @@
   "strings" : {
     "News" : {
       "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "News"
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
@@ -29,10 +35,32 @@
     },
     "ok" : {
       "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ok"
+          }
+        },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "ok"
+            "value" : "Ok"
+          }
+        }
+      }
+    },
+    "Reset" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Reset"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Reiniciar"
           }
         }
       }
